Backend e Frontend - Atualizacoes